--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -25,11 +25,11 @@
   --input: hsl(hsl(192 30% 18%));
   --ring: hsl(192 100% 15.7%);
   --radius: 0.5rem;
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
+  --chart-1: 139 65% 20%;
+  --chart-2: 140 74% 44%;
+  --chart-3: 142 88% 28%;
+  --chart-4: 137 55% 15%;
+  --chart-5: 141 40% 9%;
   --sidebar: oklch(0.985 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
   --sidebar-primary: oklch(0.205 0 0);
@@ -61,11 +61,11 @@
   --input: hsl(192 30% 18%);
   --ring: hsl(192 100% 15.7%);
   --radius: 0.5rem;
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
+  --chart-1: 142 88% 28%;
+  --chart-2: 139 65% 20%;
+  --chart-3: 140 74% 24%;
+  --chart-4: 137 55% 15%;
+  --chart-5: 141 40% 9%;
   --sidebar: oklch(0.205 0 0);
   --sidebar-foreground: oklch(0.985 0 0);
   --sidebar-primary: oklch(0.488 0.243 264.376);
